--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:            Matthew Kvalheim
 tagline:          'Welcome!'
-baseurl:          
+baseurl:          mdkvalheim.github.io
 author:
   name:           Matthew Kvalheim
   url:            https://<USERNAME>.github.io/
