--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:            Matthew Kvalheim
 tagline:          'Welcome!'
-baseurl:          http://mdkvalheim.github.io
+baseurl:          http://mdkvalheim.github.io/
 author:
   name:           Matthew Kvalheim
   url:            mdkvalheim.github.io
